<resources>
    <string name="app_name">DevBhoomi Uttarakhand</string>
    <string name="textview">\n\n\t\t\t<b><u>Biodiversity Of Uttarakhand</u></b>\n
        \n\t\t\t\t\tUttarakhand the 27th state of Republic of India lies between 28° 44\' and 31° 28\' N Latitude and 77° 35\' and 81° 01\' E longitude. It was carved out of UP on 9ᵗʰ November 2000. The geographical area of the state is 53483 sq. km and the terrain and topography of the state is largely hilly with large areas under snow cover and steep slopes.\n \nUttarakhand State comprises of 02 regions 13 districts, 78 Tehsils and 95 community development blocks. The districts lying in Garhwal Region are Uttarkashi, Chamoli, Pauri, Rudraprayag, Tehri, Dehradun and Haridwar and the remaining 06 in Kumaon Region are Udham Singh Nagar, Nainital, Almora, Pithoragarh, Champawat and Bageshwar. The human population of the State is 1.01 Crore (2001) compared to 25.18 lacs in 1951 and that of livestock is 50.22 lacs in 2012 as compared to 41.68 lacs (1993).\n

 \nUttarkashi, Chamoli and Pithoragarh districts of Uttarakhand share International boundary in the NW with China. In the east, the districts of Pithoragarh, Champawat and Udham Singh Nagar also share International boundary with Nepal. Uttarkashi and Dehradun share inter-state boundaries with Himachal Pradesh in the north-west, while Dehradun, Haridwar, part of Nainital and Udham Singh Nagar touches the boundary of Uttar Pradesh in the south.\n

 \nThe Garhwal Himalayas along with Kumaon and a part of Himachal Pradesh has unique characteristics as it has Tibet in the north, Upper Gangetic Plain in the south and Eastern Himalayan provinces in the east. Physiographically, Uttarakhand represents a cross-section of the Himalaya on the basis of its evolutionary history, namely the Trans-Himalaya, Greater Himalaya or Himadri, Lesser Himalaya, Shiwalik Ranges, foothills and Terai and the Plains of Dehradun, Haridwar and Udham Singh Nagar.\n

\nThe floral and faunal composition is diverse and interesting. Between the Himalaya in the north and the hills and the plateau in the south lies a vast Gangetic Plains which is one of the largest homogenous alluvial plains in the world. In Uttarakhand, the Bhabar skirts the Shiwaliks mainly in Garhwal and Nainital- Pilibhit while the Terai extends from River Yamuna on the west and a large portion of it lies in the Nepal. The Terai in Uttarakhand covers lower portion of district Nainital.\n

\nMajor portion of the state is mountainous and these mountains (Himalayas) are one of the youngest mountain systems of the world (40 million years in age compared to peninsular mountains of 1500-2500 million years old) and hence ecologically very fragile and relatively much more susceptible to earthquakes and landslides. Shiwalik formations are one of the most important eco-region due to their endemicity and past geological history. The era of Shiwalik ecosystem of rocks is called “Age of Mammals”. It is the filtering zone for migration of fauna and flora from highlands to lowlands and vice-versa. It is not only a gateway to the enhanced biodiversity but also to the green and white revolutions, industrialization and creation of livelihood opportunities. This region harbored a rich fauna in the geological past as evidenced by the discovery of fossils of Amphibians, Reptiles and Mammals. The wide altitudinal range is the richest zone in terms of habitat and biodiversity.\n

\nUttarakhand has everything except the sea. India, Indonesia, and the Indian Ocean cover the area once occupied by the Tethys ocean, and Turkey, Iraq, and Tibet sit on Cimmeria. What was once the Tethys Sea has become the Mediterranean sea. But discovery of the Ammonite fossils in the upper reaches of Himalayas, in Nanda Devi are suggestive of the fact that area was perhaps submerged under Tethys Sea in the geological past.  Hence, the occurrence of the marine biodiversity in the fossil form is also contributing to the richness of the faunal diversity in Uttarakhand.\n

\nThe state is represented by biographic zone 2B Western Himalaya and 7B Shiwaliks consisting of Kumaon and Garhwal regions. Total geographical area of the state (53,483 sq.km) is 1.6 % of the total geographical area of the Country, out of which 46,035 sq.km is hilly. The major wealth of the state is its forests with very rich biodiversity. The state ranks sixth among the other states in terms of percentage of recorded forest area. The state has thus varied terrain, major portion of which is mountainous with unique ecological diversity consisting of high alpine areas to the Sub-tropical and Tropical regions. Total Forest cover area in the state is 3.47 million ha constituting 71% of the State’s Geographical area. The forest diversity of the state comprises of Tropical Moist Forest (500-1000m) which is Terai and Bhabar belt of Sub Himalayan Tract, Sub-Tropical Pine Forest (1000-2000m), Himalayan Moist Temperate Forest (2000-3000m), Sub-Alpine Forests (3400-4000m) and Alpine Forests  4000-5000m). \nPhysiographically, the state can be divided into three zones namely, the Himalaya, The Shiwalik and the Tarai Region. The state has a temperate climate except in plain areas where the climate is tropical. The average annual rainfall is 1550 mm.\n

\nEnormous floristic and vegetation diversity marks the upper limit of vegetation, with variety of orchids, horticulture and economic plants, including Bamboo, wild germplasm of some cultivated species. By virtue of its extensive geographical stretch, varied terrain and climate the Himalayan Mountain Ranges in Uttarakhand are bestowed with a series of wetlands. Important perennial rivers are Ganga, Yamuna, Bhagirathi, Alaknanda, Ramganga, Nayar, Kosi, Saryu, Sharda and their tributaries. These wetlands, which are some of the most productive and endangered ecosystems, exhibit tremendous faunal diversity from Protozoa to Mammalia. They are roosting and breeding grounds and shelters for migratory and resident birds during various times of the year.\n

\nWith abounding diversity on all accounts, the biodiversity of the State is bound to be rich. After the creation of Uttarakhand, as many as 3748 faunal species were inventoried and documented which included 451 species and sub-species, two new Taxa, 22 constitute a first record for India. Ten species occurring in the state are endemic to India. The faunal species included 1060 species of vertebrates, 2020 species of Insecta Invertebrates and  4346 invertebrates excluding Insecta.\n

\nThe present state of the Uttarakhand conforms to its rich heritage status supported by a rich floral diversity, vegetation, forest cover, healthy and pristine ecosystem and tremendous conservation efforts from species level to genetic level and to ecosystem level. Due to its unique bio-diversity, the state is also home to several rare and endangered species of herbal and aromatic plants. Realizing the immense potential of this resource in the state, the state government has declared Uttarakhand as a Herbal State.\n</string>
    <string name="textviewfloral">\n\t\t\tUttarakhand is the state located at the foothills of the snow clad Himalayas with lush
        green vegetation. There is a diverse range of flora and fauna habitated in Uttarakhand. The
        State has rich and diverse floral, faunal and microbial wealth including rare and threatened
    species of plants and animals.\n
    \nTraditionally, the mountains in the lower regions of Uttarakhand were covered with moist
    deciduous forest. Between elevations of 1,500-3,000m, the major natural vegetation entails of
    Pine, Oak, Rhododendron, Walnut and Larch. Below the snow line, the vegetation consists of
    forests of Spruce, Fir, Cypress, Juniper and Birch, while above the snow line (in the higher
    altitude of the State) is Alpine vegetation which includes Mosses, Lichen and a diversity of
    wildflowers such as Blue Poppies and Edelweiss. As a result of deforestation, much of the
    original fauna of the Himalayas are restricted to protected areas and sanctuaries.\n </string>
    <string name="textviewfloral1">
        \nIn Floral diversity point of view, Uttarakhand falls under the West Himalayan Biogeographic
zone, situated in the lap of the Himalaya ther region is rich in forest wealth that ranges from
subtropical to Alpine types.The flora and vegetation of the state ranges from tropical deciduous
to alpine vegetation; broadly catagorised into three mazor types :\n</string>
    <string name="textviewfloral2">
        \n\t<b><u>1. Sub-Tropical Zone of Uttarakhand</u></b>\n
The sub-tropical zone has pure as well as mixed forests of Shore Robusta (Sa I), the others
being Lannea coromandelica (Jhingan), Buchanania lanzan,Dalbergia disso (Shisham), Haldina cordifolia (Haldu),Syzygium cumini (Jamun), Mallotus philippinensis (Rohini),Mitragyna parvifolia, Terminalia spp. (Myrobalans), Ficus spp.(Figs), Macaranga pustulata, Callicarpa arborea,Diopoknema butyracea (Chyura), Bauhinia variegate(Kachnar), Bomb ax cobia (Semal), Lydia claying (Pula),Schleicher oleos (Kokum), Holoptelea integrities (Karanj),Cassia fistula (Amaltas), Nyctanthes arbor-tristis (Parijat),
Anogeissus latifolia (Bakli, Dhaura), etc. The shrubby vegetation is represented by Murrayakoenigii, Carissa opaca, Clerodendrum viscous, Adhatoda vasica, Jasminum multiflorum, Solanumerianthum, Cal/icarpa macrophylla, Eranthemum nervosum, Phlogacanthus thyrsiformis, Jatrophacurcas, Rhus parviflora, Dodonaea viscosa, Woodfordia fruticosa and many others.\n</string>
    <string name="textviewfloral3">
        \n\t\t<b><u>2. Temperate Zone of Uttarakhand</u></b>\n
The Temperate zone is marked by the presence of Quercus
leucotrichophora (Banj oak), Rhododendron arboretum (Burans), Myrica
esculent a (Kaphal), Leonia ovalifolia (Aynor), Ibex dipyrena, Quercus
semecarpifolia (Kharsu Oak), Q. dilatata (Moru Oak), etc. The coniferous
forests in this zone are unique. Pure stands of Pinus roxburghii (Chir Pine)
and Cadres deodar (Deodar, Cedar), Abides windrow (Raga), Pinus
wal/ichiana (Kail), Taxus wal/ichiana (Thuner, Himalayan Yew) at places
give a pristine look to the slopes. The slopes in temperate zone also have
insectivorous plants like Drosera peltata and species of Utricularia. Another
such species is Pinguicula alpina seen in Martoli Bugyal, Kumaon.\n
        \nThe Saprophytes and Parasites are also well represented by Monotropa
unit/ora, Dendrophthoe falcata (Banda), Balanophora in volucrata, and
species of Viscum, Korthalsella, Arceuthobium, Scurrula, etc. The zone has a
variety of useful plants, some of them well known for centuries. These include Cedrus deodar a,
Pinus spp., Abies pindrow, Quercus spp., Aconitum heterophyllum, Paeonia emodi, Swertia
chirayita, Bergenia ciliata, Dioscorea deltoidea, Angelica glauca (Choru), etc.\n
    </string>
    <string name="textviewfloral4">
   \n\t\t<b><u>3. Sub-Alpine and Alpine Zones of Uttarakhand</u></b>
The altitude above 3,000 metres is generally considered a zone of sub-alpine and alpine
vegetation. The tree species are represented by Pinus wallichiana,
Abies pindrow, Prunus cornuta, Acer caesium, Betula utilis (Bhoj Patra)
and Salix sp. Species of the genera Cotoneaster, Rosa, Berberis,
Ribes, Junipers, Rhododendron anthropogenic, Rhododendron
campanulas are the shrubby components of the zone. \nThe herbaceous
vegetation is represented by a number of species of genera Po
ten till, Primula, Aster, Saxifrage, Achaean, Delphinium,
Polygonal,Corydalis, Pleurospermum, Meconopsis, Pedicularis,
Saussurea, Rheum, Silene, etc. The Bugyals of this zone are well
known for a rich and diversified flora. Plant species like
Nardostachys grand flora (Jatamansi), Podophyllum hexandrum
(Himalayan May-Apple, Papri), Picrorhiza kurrooa (Kutaki), Gentian
burro, Armenia benthonic (Bal char), Rheum moorcroftianum \n</string>
</resources>